--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -32,10 +32,11 @@ jobs:
         run: docker build . --file Dockerfile --tag ${DOCKERHUB_REPOSITORY}:rolling-${BRANCH}-${SHORT_SHA}
 
       - name: Docker push rolling image
+        if: env.BRANCH != ''
         run: docker push ${DOCKERHUB_REPOSITORY}:rolling-${BRANCH}-${SHORT_SHA}
 
       - name: Docker push stable image
-        if: env.TAG != '' && env.BRANCH == 'master'
+        if: env.BRANCH != '' && env.TAG != '' && env.BRANCH == 'master'
         run: docker tag ${DOCKERHUB_REPOSITORY}:rolling-${BRANCH}-${SHORT_SHA} ${DOCKERHUB_REPOSITORY}:${TAG} && docker push ${DOCKERHUB_REPOSITORY}:${TAG}
 
       - name: Sync Docker Hub Description
