--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -36,7 +36,7 @@ jobs:
         run: docker push ${DOCKERHUB_REPOSITORY}:rolling-${BRANCH}-${SHORT_SHA}
 
       - name: Docker push stable image
-        if: env.BRANCH != '' && env.TAG != '' && env.BRANCH == 'master'
+        if: env.TAG != ''
         run: docker tag ${DOCKERHUB_REPOSITORY}:rolling-${BRANCH}-${SHORT_SHA} ${DOCKERHUB_REPOSITORY}:${TAG} && docker push ${DOCKERHUB_REPOSITORY}:${TAG}
 
       - name: Sync Docker Hub Description
@@ -44,3 +44,19 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Create Release
+        if: env.TAG != ''
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ env.TAG }}
+          release_name: Release ${{ env.TAG }}
+          body: |
+            ```
+            docker run --name=anypush --restart=unless-stopped -e WEBHOOK_URL=https://example.com/api -p 0.0.0.0:1025:1025 ${{ env.DOCKERHUB_REPOSITORY }}:${{ env.TAG }}
+            ```
+          draft: false
+          prerelease: false
